--- a/style.css
+++ b/style.css
@@ -600,6 +600,7 @@ footer{
     }
  
     .headercontainer{
+        width:100%;
         background: #242526;
         margin:0 auto;
         display:flex;
