--- a/style.css
+++ b/style.css
@@ -592,20 +592,14 @@ footer{
 
 
 @media only screen and (max-width:768px){    
-    *{
-        width:100%;
-
-    }
-    body{
-        width:100%;
-        overflow-x: hidden;
-    }
-    nav{
-        overflow-x:hidden;
-       height:65px;
-       line-height:65px;
+   body{
+    width:100%;
+    margin:0;
+    padding:0;
+   }
+   .nav {
         z-index:1000;
-        width:100%;    
+        
     }
  
     .headercontainer{
