--- a/style.css
+++ b/style.css
@@ -596,11 +596,13 @@ footer{
     width:100%;
     margin:0;
     padding:0;
+    
    }
 
-   .nav {
+   nav {
         max-width: 100%;
         z-index:1000;
+        background-color: yellow;
         
     }
  
