--- a/style.css
+++ b/style.css
@@ -593,7 +593,7 @@ footer{
 
 @media only screen and (max-width:768px){    
    body{
-
+    overflow-x: hidden;
     margin:0;
     padding:0;
     background-color: blue;
