--- a/style.css
+++ b/style.css
@@ -592,7 +592,6 @@ footer{
 
 @media only screen and (max-width:480px){    
     body{
-     overflow-x: hidden;
      margin:0;
      padding:0;
      background-color: blue;
@@ -600,7 +599,8 @@ footer{
     }
  
     nav{
-       
+        width:100%;
+        overflow-x: hidden;
          z-index:1000;
          background-color: yellow;
          
