--- a/style.css
+++ b/style.css
@@ -695,7 +695,7 @@ footer{
         
      }
  }
-@media only screen and (max-width:768px){    
+@media only screen and (min-width:481px) and (max-width:768px){    
    body{
     overflow-x: hidden;
     margin:0;
