--- a/style.css
+++ b/style.css
@@ -638,15 +638,13 @@ footer{
      
      }
      .phonenumber{
-      display:none;
+        color:yellow;
  
      }
      .hamburgermenucontainer{
         padding-top:1rem;
      }
-     .phonesize{
-         color:purple;
-     }
+   
      .phonenum{
          display:none;
      }
@@ -697,6 +695,52 @@ footer{
          margin:0;
         
      }
+     .reviewcontainer{
+        position:static;
+        
+        width:100%;
+        background-color: blue;
+        font-size:25px;
+    }
+    .review{ 
+        max-width:70%;
+        margin:0 auto;
+        padding:20px 0;   
+    }
+    .google, .facebook, .clutch{
+        margin:0;
+        font-size:40px;
+        padding:0;
+        color:white;
+    }
+    .review div p{
+        padding:0;
+        margin:0;
+        color:gold;
+    }
+    .review div p i{
+        padding:5px;
+    }
+
+
+
+
+.caseheadercontainer
+"casestudycontainer
+casestudy
+="testheader
+testimonialscontainer"
+"testimonials"
+chooseheade
+chooseuscontainer
+"awardsheader
+"awardscontainer
+="blogscontainer"
+"blogs
+servicesheade
+"servicescontainer"
+quotecontainer"
+footercontainer"
  }
 @media only screen and (min-width:481px) and (max-width:768px){    
    body{
