--- a/style.css
+++ b/style.css
@@ -718,6 +718,33 @@ footer{
     }
 
 
+
+
+    .caseheadercontainer{
+        position: static;
+    }
+    .casestudycontainer{
+        position:static;
+     
+    }
+    casestudy{
+        display: block;
+    }
+    .testheader{
+
+    }
+    testimonialscontainer"
+    "testimonials"
+    chooseheade
+    chooseuscontainer
+    "awardsheader
+    "awardscontainer
+    ="blogscontainer"
+    "blogs
+    servicesheade
+    "servicescontainer"
+    quotecontainer"
+    footercontainer"
  }
 @media only screen and (min-width:481px) and (max-width:768px){    
    body{
