--- a/style.css
+++ b/style.css
@@ -727,7 +727,7 @@ footer{
         position:static;
      
     }
-    casestudy{
+    .casestudy{
         display: block;
     }
     .testheader{
