--- a/style.css
+++ b/style.css
@@ -734,21 +734,12 @@ footer{
 
     }
     .testimonialscontainer{
-
+        position:static;
     }
     .testimonials{
         display:block;
     }
-    chooseheade
-    chooseuscontainer
-    "awardsheader
-    "awardscontainer
-    ="blogscontainer"
-    "blogs
-    servicesheade
-    "servicescontainer"
-    quotecontainer"
-    footercontainer"
+ 
  }
 @media only screen and (min-width:481px) and (max-width:768px){    
    body{
