--- a/style.css
+++ b/style.css
@@ -740,11 +740,11 @@ footer{
         display:block;
     }
  
-    chooseheade
+    /* chooseheade
     chooseuscontainer
     "awardsheader
     "awardscontainer
-    blogscontainer"
+    blogscontainer" */
     .blogs{
         display:block;
     }
