--- a/style.css
+++ b/style.css
@@ -601,6 +601,7 @@ footer{
   
      .headercontainer{
         width:100%;
+        padding:0.5rem 0;
         background: #242526;
         display:flex;
         align-items:center;
