--- a/style.css
+++ b/style.css
@@ -601,7 +601,7 @@ footer{
   
      .headercontainer{
         width:100%;
-        padding:0.5rem 0;
+        padding:-0.5rem 0.5rem 0.5rem 0.5rem;
         background: #242526;
         display:flex;
         align-items:center;
