--- a/style.css
+++ b/style.css
@@ -596,12 +596,13 @@ footer{
         overflow-x: hidden;
          z-index:3;
          background-color: yellow;
-         
+         margin:0;
      }
   
      .headercontainer{
+        height: auto;
         width:100%;
-        padding:-0.5rem 0.5rem 0.5rem 0.5rem;
+        margin:0;
         background: #242526;
         display:flex;
         align-items:center;
