--- a/style.css
+++ b/style.css
@@ -597,14 +597,13 @@ footer{
          z-index:3;
          background-color: yellow;
          margin:0;
-         top:0;
-         position: fixed;
+      
      }
   
      .headercontainer{
-        height: auto;
+        height: 70px;
         width:100%;
-        margin:0;
+
         background: #242526;
         display:flex;
         align-items:center;
