--- a/style.css
+++ b/style.css
@@ -603,7 +603,7 @@ footer{
      .headercontainer{
         height: 70px;
         width:100%;
-
+        position:static;
         background: #242526;
         display:flex;
         align-items:center;
